--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -6,7 +6,7 @@ OrgNr:           123456789012
 BestallningsId:  00001234-FO01-1234
 
 socsec_attribute: PNR
-protect_attribute: SKYDDAD
+protected_attribute: SKYDDAD
 
 patronmap:
     firstname: './Personpost/Namn/Fornamn'
