Make userid default for storing personnummer

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -12,8 +12,9 @@ BestallningsId:  00001234-FO01-1234
 # Scripts will write logs to this location
 logdir: /etc/koha/sites/mykoha/navet2koha/
 
-# Which extended patron attribute in Koha will be used to store the "personnummer"
-# (social security number) of patrons?
+# As a default, the script will use the "borrowers.userid" field in Koha as the
+# personnummer/social security number. If you want to use an "extended patron
+# attribute" instead, give the name of the attribute here.
 socsec_attribute: PNR
 
 # Some patrons might have a "protected identity", which means their name and
